@@ -25,6 +25,8 @@ import us.ihmc.quadrupedRobotics.util.YoPreallocatedList;
 import us.ihmc.robotics.dataStructures.parameter.DoubleArrayParameter;
 import us.ihmc.robotics.dataStructures.parameter.DoubleParameter;
 import us.ihmc.robotics.dataStructures.parameter.ParameterFactory;
+import us.ihmc.robotics.lists.GenericTypeBuilder;
+import us.ihmc.robotics.lists.RecyclingArrayList;
 import us.ihmc.robotics.math.frames.YoFramePoint;
 import us.ihmc.robotics.math.frames.YoFrameVector;
 import us.ihmc.robotics.referenceFrames.OrientationFrame;
@@ -93,7 +95,7 @@ public class QuadrupedStepController implements QuadrupedController, QuadrupedSt
    private final OrientationFrame bodyOrientationReferenceFrame;
 
    private final FramePoint3D stepGoalPosition;
-   private final YoPreallocatedList<YoQuadrupedTimedStep> stepSequence;
+   private final RecyclingArrayList<YoQuadrupedTimedStep> stepSequence;
 
    // inputs
    private final YoDouble haltTime = new YoDouble("haltTime", registry);
@@ -140,15 +142,17 @@ public class QuadrupedStepController implements QuadrupedController, QuadrupedSt
       bodyOrientationReference = new FrameQuaternion();
       bodyOrientationReferenceFrame = new OrientationFrame(bodyOrientationReference);
       stepGoalPosition = new FramePoint3D();
-      stepSequence = new YoPreallocatedList<>("stepSequence", registry, MAXIMUM_STEP_QUEUE_SIZE,
-            new YoPreallocatedList.DefaultElementFactory<YoQuadrupedTimedStep>()
-            {
-               @Override
-               public YoQuadrupedTimedStep createDefaultElement(String prefix, YoVariableRegistry registry)
-               {
-                  return new YoQuadrupedTimedStep(prefix, registry);
-               }
-            });
+      stepSequence = new RecyclingArrayList<>(MAXIMUM_STEP_QUEUE_SIZE, new GenericTypeBuilder<YoQuadrupedTimedStep>()
+      {
+         private int stepNumber = 0;
+         @Override
+         public YoQuadrupedTimedStep newInstance()
+         {
+            YoQuadrupedTimedStep step = new YoQuadrupedTimedStep("stepSequence" + stepNumber, registry);
+            stepNumber++;
+            return step;
+         }
+      });
 
       balanceManager = new QuadrupedBalanceManager(controllerToolbox, stepSequence, postureProvider, registry, timedContactSequence, dcmTransitionTrajectory);
 
@@ -253,12 +257,12 @@ public class QuadrupedStepController implements QuadrupedController, QuadrupedSt
       {
          if (!haltFlag.getBooleanValue() || stepStream.getSteps().get(i).getTimeInterval().getEndTime() < haltTime.getDoubleValue())
          {
-            stepSequence.add();
-            stepSequence.get(stepSequence.size() - 1).set(stepStream.getSteps().get(i));
-            stepSequence.get(stepSequence.size() - 1).getGoalPosition(stepGoalPosition);
+            YoQuadrupedTimedStep step = stepSequence.add();
+            step.set(stepStream.getSteps().get(i));
+            step.getGoalPosition(stepGoalPosition);
             stepGoalPosition.changeFrame(worldFrame);
             stepGoalPosition.add(accumulatedStepAdjustment);
-            stepSequence.get(stepSequence.size() - 1).setGoalPosition(stepGoalPosition);
+            step.setGoalPosition(stepGoalPosition);
          }
       }
    }
@@ -370,7 +374,7 @@ public class QuadrupedStepController implements QuadrupedController, QuadrupedSt
    public ControllerEvent process()
    {
       double currentTime = robotTimestamp.getDoubleValue();
-      if (stepSequence.size() == 0 || stepSequence.get(stepSequence.size() - 1).getTimeInterval().getEndTime() < currentTime)
+      if (stepSequence.size() == 0 || stepSequence.getLast().getTimeInterval().getEndTime() < currentTime)
       {
          return ControllerEvent.DONE;
       }
